--- a/config/argocd/kustomization.yaml
+++ b/config/argocd/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
 - argo-app.yaml
 - cicd-app.yaml
-- dev-dev-app-taxi-app.yaml
-- dev-dev-env-app.yaml
-- dev-stage-env-app.yaml
+- dev-app-taxi-app.yaml
+- dev-env-app.yaml
+- stage-env-app.yaml
